Added CodeMirror + some refactoring

--- a/src/Inceptum.AppServer.Management/UI/index.html
+++ b/src/Inceptum.AppServer.Management/UI/index.html
@@ -6,6 +6,7 @@
   <link href="favicon.ico" rel="shortcut icon">
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/jquery.treeview.css">
+    <link rel="stylesheet" href="css/codemirror.css">
 
 
   <script data-main="js/main" src="js/libs/require/require.js"></script>
@@ -36,7 +37,7 @@
     </div>
     
     <footer class="footer clearfix">
-      <div class="copyright">Keep it simplest</div>
+      <div class="copyright"></div>
 
       <nav class="menu_bottom">
         <ul>
@@ -46,7 +47,6 @@
         </ul>
       </nav>
     </footer>
-
   </div>
 </body>
 </html>
