Some UI improvements. Error reporting, confirmation dialogs etc.

--- a/UiMockUps/index.htm
+++ b/UiMockUps/index.htm
@@ -7,20 +7,25 @@
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
+
         html, body {
             height: 100%;
         }
 
-        dt{
+        dt {
             margin-top: .5em;
             margin-bottom: .3em;
         }
-#sidebar>div{
-    position:fixed;
-    width:220px;
-}
+
+        #sidebar>div {
+            position: fixed;
+            width: 220px;
+        }
 
     </style>
+    <script type="text/javascript">
+        //       if (!console) console = {log: function() {}};
+    </script>
 
     <script src="js/libs/console-log-wrapper.js"></script>
     <script data-main="js/main" src="js/require-jquery.js"></script>
@@ -29,7 +34,7 @@
 
 <div id="header"></div>
 
-<div class="container"  id="main">
+<div class="container" id="main">
     <div class="row">
         <div class="span3" id="sidebar">
         </div>
