UI alerts width

--- a/UiMockUps/index.htm
+++ b/UiMockUps/index.htm
@@ -3,6 +3,7 @@
 <head>
     <title>Inceptum.AppServer</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap-notify.css" rel="stylesheet">
     <style>
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
