bundle edit: json verification

--- a/UiMockUps/index.htm
+++ b/UiMockUps/index.htm
@@ -4,13 +4,15 @@
     <title>Inceptum.AppServer</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-notify.css" rel="stylesheet">
+    <link href="css/codemirror.css" rel="stylesheet">
+    <link href="css/prettify.css" rel="stylesheet">
     <style>
         body {
             padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
         }
 
         html, body {
-            height: 100%;
+         /* height: 100%;*/
         }
 
         dt {
@@ -22,6 +24,12 @@
             position: fixed;
             width: 220px;
         }
+/*
+        #content{
+            height: 600px;
+            overflow-y: auto;
+            overflow-x: auto;
+        }*/
 
     </style>
     <script type="text/javascript">
