--- a/UiMockUps/index.htm
+++ b/UiMockUps/index.htm
@@ -24,12 +24,11 @@
             position: fixed;
             width: 220px;
         }
-/*
-        #content{
-            height: 600px;
-            overflow-y: auto;
-            overflow-x: auto;
-        }*/
+        .page-header {
+            padding-bottom: 5px;
+            margin: 0px 0 30px;
+            border-bottom: 1px solid #EEE;
+        }
 
     </style>
     <script type="text/javascript">
