Sending commands to instance from UI

--- a/src/Inceptum.AppServer.Management/Content/index.htm
+++ b/src/Inceptum.AppServer.Management/Content/index.htm
@@ -4,6 +4,7 @@
     <title>Inceptum.AppServer</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-notify.css" rel="stylesheet">
+    <link href="css/bootstrap-datepicker.css" rel="stylesheet">
     <link href="css/codemirror.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
     <style>
