--- a/src/Inceptum.AppServer.Management/Content/index.htm
+++ b/src/Inceptum.AppServer.Management/Content/index.htm
@@ -31,6 +31,24 @@
             border-bottom: 1px solid #EEE;
         }
 
+
+         /* dropdown buttons in btn-group . see instanceRow*/
+        .btn-group.btn {   border: 0;   padding: 0; }
+        .btn-group.btn > .btn { border-radius: 0 }
+        .btn-group.btn > .dropdown-menu {  text-align: left; }
+        .btn-group.btn:first-child > .btn {
+            -webkit-border-radius: 4px 0 0 4px;
+            -moz-border-radius: 4px 0 0 4px;
+            border-radius: 4px 0 0 4px;
+        }
+
+        .btn-group.btn:last-child > .btn {
+            -webkit-border-radius: 0 4px 4px 0;
+            -moz-border-radius: 0 4px 4px 0;
+            border-radius: 0 4px 4px 0;
+        }
+
+
     </style>
     <script type="text/javascript">
         //       if (!console) console = {log: function() {}};
