instance start order

--- a/src/Inceptum.AppServer/WebApi/Content/index.html
+++ b/src/Inceptum.AppServer/WebApi/Content/index.html
@@ -14,6 +14,7 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap-notify.css" rel="stylesheet">
     <link href="css/bootstrap-datepicker.css" rel="stylesheet">
+    <link href="css/bootstrap-spinedit.css" rel="stylesheet">
     <link href="css/codemirror.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
     <style>
