--- a/src/Inceptum.AppServer/WebApi/Content/index.html
+++ b/src/Inceptum.AppServer/WebApi/Content/index.html
@@ -15,7 +15,9 @@
     <link href="css/bootstrap-notify.css" rel="stylesheet">
     <link href="css/bootstrap-datepicker.css" rel="stylesheet">
     <link href="css/bootstrap-spinedit.css" rel="stylesheet">
-    <link href="css/codemirror.css" rel="stylesheet">
+    <link href="js/libs/codemirror/lib/codemirror.css" rel="stylesheet">
+    <link href="js/libs/codemirror/addon/dialog/dialog.css" rel="stylesheet">
+    <link href="js/libs/codemirror/addon/search/matchesonscrollbar.css" rel="stylesheet">
     <link href="css/prettify.css" rel="stylesheet">
     <style>
         html, body {
