Feature:Configuration/Search: 1) fixed bootstrap.js typeahead data objects issue 2) added search.js 3) ConfigurationsController: search api

--- a/src/Inceptum.AppServer/WebApi/Content/index.html
+++ b/src/Inceptum.AppServer/WebApi/Content/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!--[if lt IE 7]>
 <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>
@@ -91,18 +91,15 @@
             border-radius: 0 4px 4px 0;
         }
 
- 
-
-    /*    .sidebar {
-			width:400px;
-			position:fixed;
-			top:60px;
-        }
-		*/
 		.main {padding-left:400px;}
 		.sidebar {width:380px; float:left;margin-top:60px; }
 		 
-
+        li.active div.typeahead div.typeahead-head {
+            color: white;
+        }
+        li div.typeahead-head {
+            color: #08c;
+        }
     </style>
     <script type="text/javascript">
         //       if (!console) console = {log: function() {}};
